--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200212071312_init.cs" />
     <Compile Remove="Migrations\20200212071312_init.Designer.cs" />
+    <Compile Remove="Migrations\20200212194033_artikel-no-auto-pk.cs" />
+    <Compile Remove="Migrations\20200212194033_artikel-no-auto-pk.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
