--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -9,6 +9,10 @@
     <Compile Remove="Migrations\20200212071312_init.Designer.cs" />
     <Compile Remove="Migrations\20200212194033_artikel-no-auto-pk.cs" />
     <Compile Remove="Migrations\20200212194033_artikel-no-auto-pk.Designer.cs" />
+    <Compile Remove="Migrations\20200213120732_revamp-test-db.cs" />
+    <Compile Remove="Migrations\20200213120732_revamp-test-db.Designer.cs" />
+    <Compile Remove="Migrations\20200213145038_change-relation-opmerking-batterij.cs" />
+    <Compile Remove="Migrations\20200213145038_change-relation-opmerking-batterij.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
