--- a/Battery Service Support/Battery Service Support.csproj
+++ b/Battery Service Support/Battery Service Support.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\ViewModel\ViewModel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Installatie\" />
+  </ItemGroup>
+
 </Project>
