--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -13,6 +13,8 @@
     <Compile Remove="Migrations\20200213120732_revamp-test-db.Designer.cs" />
     <Compile Remove="Migrations\20200213145038_change-relation-opmerking-batterij.cs" />
     <Compile Remove="Migrations\20200213145038_change-relation-opmerking-batterij.Designer.cs" />
+    <Compile Remove="Migrations\20200311082558_AddInfoToBatterij.cs" />
+    <Compile Remove="Migrations\20200311082558_AddInfoToBatterij.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
